--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Valiex's canvases
+title: Gustavs' canvases
 description: Some cools things I've created with html canvas
